# ansel

./: .gitignore  .gitmodules  AUTHORS  AppImageBuilder.yml  CMakeLists.txt  ConfigureChecks.cmake  DefineOptions.cmake  README.md  RELEASE_NOTES.md  build.sh  iwyu.imp
.ci/: Brewfile  Dockerfile  ci-script-appimage.sh  ci-script-windows.sh  ci-script.sh  matrix.py
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  PROJECT.yml  bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  lin-nightly.yml  mac-nightly.yml  manualrun.yml  matrix.yml  nightly.yml  win-nightly.yml
cmake/: ansel-packaging.cmake  compiler-versions.cmake  windows-macros.cmake
cmake/modules/: FindGMIC.cmake  FindICU.cmake  Findlibraw.cmake  NSIS.template.in
data/: CMakeLists.txt  ansel.appdata.xml.in  ansel.bash  ansel.desktop.in  anselconfig.dtd  anselconfig.xml.in  darktableconfig.dtd  darktableconfig.xml.in  luarc  photos.ansel.app.appdata.xml.in  photos.ansel.app.desktop.in  supported_extensions.cmake
data/kernels/: CMakeLists.txt  basic.cl  channelmixer.cl  colorspace.h  diffuse.cl  extended.cl  filmic.cl  negadoctor.cl  noise_generator.h
data/pixmaps/: CMakeLists.txt
data/pswp/: photoswipe.js
data/themes/: ansel.css  ansel.min.css  darktable-elegant-darker.css  darktable.css
doc/: CMakeLists.txt  Doxyfile  Doxyfile.bak  README.md  color.md  compress-doc.sh  custom.css  custom.min.css  doxygen.conf  footer.html  grouping.md  header.html  index.md  reorganisation.md  selection.md  thumbnail_color_management.md
doc/man/: CMakeLists.txt  README.md  ansel-cli.pod  ansel-cltest.pod  ansel-cmstest.pod  ansel-generate-cache.pod  ansel.pod
doc/pdf/: hacking.tex
packaging/: CMakeLists.txt
packaging/Solaris_11/: How_to_build_a_Solaris11_package  README.Solaris  ansel-manifest.pkg5.base  build_ips
packaging/arch/: README
packaging/macosx/: .gitignore  1_install_hb_dependencies.sh  2_build_hb_ansel_custom.sh  3_make_hb_ansel_package.sh  4_make_hb_ansel_dmg.sh  BUILD.txt  BUILD_hb.txt  Dependencies.txt  Info.plist  ansel.bundle  ansel.css.patch  make-app-bundle
packaging/nix/: default.nix
packaging/opensuse/: ansel.changes  ansel.spec
packaging/windows/: BUILD.md
po/: CMakeLists.txt  POTFILES.in  af.po  ansel.pot  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  gl.po  he.po  hu.po  it.po  ja.po  missing  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sr@latin.po  sv.po  th.po  tr.po  uk.po  update-translations.sh  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  config.cmake.h  main.c
src/bauhaus/: bauhaus.c  bauhaus.h
src/chart/: CMakeLists.txt  colorchart.c
src/cli/: CMakeLists.txt  main.c
src/cltest/: CMakeLists.txt
src/cmstest/: CMakeLists.txt  main.c
src/common/: act_on.c  act_on.h  box_filters.c  bspline.h  cache.c  chromatic_adaptation.h  collection.c  collection.h  color_vocabulary.c  color_vocabulary.h  colorchecker.h  colorlabels.c  colorspaces.c  colorspaces.h  colorspaces_inline_conversions.h  darktable.c  darktable.h  database.c  datetime.c  datetime.h  dbus.c  debug.h  distance_transform.h  dtpthread.h  dttypes.h  exif.cc  exif.h  fast_guided_filter.h  file_location.c  file_location.h  film.c  focus.h  focus_peaking.h  guided_filter.c  guided_filter.h  heal.c  history.c  history_snapshot.c  http_server.c  illuminants.h  (+62 more)
src/control/: control.c  control.h  crawler.c  jobs.c  jobs.h  progress.c  signal.c  signal.h
src/develop/: blend.c  blend.h  blend_gui.c  develop.c  develop.h  imageop.c  imageop.h  imageop_math.c  lightroom.c  masks.h  pixelpipe.h  pixelpipe_cache.c  pixelpipe_cache.h  pixelpipe_hb.c  pixelpipe_hb.h  tiling.c
src/dtgtk/: culling.c  culling.h  gradientslider.c  paint.c  thumbnail.c  thumbnail.h  thumbtable.c  thumbtable.h
src/generate-cache/: CMakeLists.txt  main.c
src/gui/: accelerators.c  accelerators.h  color_picker_proxy.c  gtk.c  gtk.h  gtkentry.c  guides.c  guides.h  hist_dialog.c  import_metadata.c  preferences.c  presets.c  styles_dialog.c  window_manager.c  window_manager.h
src/imageio/storage/: CMakeLists.txt  disk.c  example.c  gallery.c  imageio_storage_api.h  latex.c  piwigo.c
src/iop/: CMakeLists.txt  ashift.c  ashift_nmsimplex.c  atrous.c  basecurve.c  basicadj.c  bilat.c  bilateral.cc  bloom.c  blurs.c  borders.c  cacorrect.c  cacorrectrgb.c  censorize.c  channelmixer.c  channelmixerrgb.c  choleski.h  clahe.c  clipping.c  colisa.c  colorbalance.c  colorbalancergb.c  colorchecker.c  colorcontrast.c  colorcorrection.c  colorin.c  colorize.c  colormapping.c  colorout.c  colorreconstruction.c  colortransfer.c  colorzones.c  crop.c  defringe.c  demosaic.c  denoiseprofile.c  diffuse.c  dither.c  equalizer.c  exposure.c  (+52 more)
src/libs/: CMakeLists.txt  collect.c  colorpicker.c  colorpicker.h  copy_history.c  duplicate.c  export.c  geotagging.c  histogram.c  history.c  image.c  import.c  ioporder.c  lib.c  lib.h  masks.c  metadata.c  metadata_view.c  modulegroups.c  modulegroups.h  navigation.c  print_settings.c  recentcollect.c  select.c  session.c  snapshots.c  styles.c  tagging.c
src/libs/tools/: colorlabels.c  darktable.c  filter.c  gamepad.c  global_toolbox.c  hinter.c  image_infos.c  lighttable.c  mask_toolbar.c  menu.c  menu_buttons.c  midi.c  module_toolbox.c  view_toolbox.c  viewswitcher.c
src/lua/: database.c  format.c  image.c  lib.c  lualib.c  luastorage.c  preferences.c
src/tests/: CMakeLists.txt  cache.c  variables.c
src/tests/benchmark/: README.txt  ansel-bench
src/tests/integration/: README.md  run.sh
src/tests/unittests/: CMakeLists.txt
src/tests/unittests/iop/: CMakeLists.txt
tools/: CMakeLists.txt  ansel-gnome-nightlight-disabled.sh  check_camera_support  extract_wb_from_images.sh  generate_anselrc_doc.xsl  generate_prefs.xsl  get_git_version_string.sh  purge_from_cache.sh  purge_non_existing_images.sh  purge_unused_tags.sh
tools/basecurve/: CMakeLists.txt  README.cmake.md  ansel-curve-tool-helper  ansel-curve-tool.c  exif-wrapper.cpp
tools/noise/: CMakeLists.txt  ansel-gen-noiseprofile  capture-images  subr.sh
(+74 files in other folders)
